fixed x overflow for loader

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -5,6 +5,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 html,
 body {
     max-width: 100vw!important;
